refactor: migrate Collections/Arrays.asList to Java 9+ factory methods
Motivation:
Java 9+ provides List.of(), Map.of(), Set.of() factory methods that are
more concise and return truly immutable collections.

Modification:
Replace Arrays.asList() with List.of() across 48 files (212 occurrences).
Replace Collections.emptyList/Map/Set() and singletonList() with
List/Map/Set.of() across 12 files. Update imports accordingly.

Result:
Cleaner code using Java 17 immutable collection factories.

Tests:
Not run - compile-only test file changes

References:
None - Java 17 API modernization