@@ -90,7 +90,7 @@ public class ElasticsearchV7Test extends ElasticsearchTestBase {
     List<String> result = new ArrayList<>(f2.toCompletableFuture().get());
 
     List<String> expect =
-        Arrays.asList(
+        List.of(
             "Akka Concurrency",
             "Akka in Action",
             "Effective Akka",
@@ -146,7 +146,7 @@ public class ElasticsearchV7Test extends ElasticsearchTestBase {
     List<String> result = new ArrayList<>(f2.toCompletableFuture().get());
 
     List<String> expect =
-        Arrays.asList(
+        List.of(
             "Akka Concurrency",
             "Akka in Action",
             "Effective Akka",
@@ -203,7 +203,7 @@ public class ElasticsearchV7Test extends ElasticsearchTestBase {
     List<String> result2 = new ArrayList<>(f2.toCompletableFuture().get());
 
     List<String> expect =
-        Arrays.asList(
+        List.of(
             "Akka Concurrency",
             "Akka in Action",
             "Effective Akka",
@@ -222,7 +222,7 @@ public class ElasticsearchV7Test extends ElasticsearchTestBase {
     String indexName = "sink3-0";
     CompletionStage<List<WriteResult<String, NotUsed>>> write =
         Source.from(
-                Arrays.asList(
+                List.of(
                     WriteMessage.createIndexMessage("1", "{\"title\": \"Das Parfum\"}"),
                     WriteMessage.createIndexMessage("2", "{\"title\": \"Faust\"}"),
                     WriteMessage.createIndexMessage(
@@ -256,7 +256,7 @@ public class ElasticsearchV7Test extends ElasticsearchTestBase {
 
     List<String> result2 = new ArrayList<>(f2.toCompletableFuture().get());
 
-    List<String> expect = Arrays.asList("Das Parfum", "Die unendliche Geschichte", "Faust");
+    List<String> expect = List.of("Das Parfum", "Die unendliche Geschichte", "Faust");
 
     Collections.sort(result2);
     assertEquals(expect, result2);
@@ -266,7 +266,7 @@ public class ElasticsearchV7Test extends ElasticsearchTestBase {
   public void testMultipleOperations() throws Exception {
     // Create, update, upsert and delete documents in sink8/book
     List<WriteMessage<Book, NotUsed>> requests =
-        Arrays.asList(
+        List.of(
             WriteMessage.createIndexMessage("00001", new Book("Book 1")),
             WriteMessage.createUpsertMessage("00002", new Book("Book 2")),
             WriteMessage.createUpsertMessage("00003", new Book("Book 3")),
@@ -297,7 +297,7 @@ public class ElasticsearchV7Test extends ElasticsearchTestBase {
             .runWith(Sink.seq(), system);
 
     List<String> result2 = new ArrayList<>(f2.toCompletableFuture().get());
-    List<String> expect = Arrays.asList("Book 1", "Book 3");
+    List<String> expect = List.of("Book 1", "Book 3");
     Collections.sort(result2);
 
     assertEquals(expect, result2);
@@ -310,7 +310,7 @@ public class ElasticsearchV7Test extends ElasticsearchTestBase {
     // to commit the offset to Kafka
 
     List<KafkaMessage> messagesFromKafka =
-        Arrays.asList(
+        List.of(
             new KafkaMessage(new Book("Book 1"), new KafkaOffset(0)),
             new KafkaMessage(new Book("Book 2"), new KafkaOffset(1)),
             new KafkaMessage(new Book("Book 3"), new KafkaOffset(2)));
@@ -349,7 +349,7 @@ public class ElasticsearchV7Test extends ElasticsearchTestBase {
     flushAndRefresh("sink6");
 
     // Make sure all messages was committed to kafka
-    assertEquals(Arrays.asList(0, 1, 2), kafkaCommitter.committedOffsets);
+    assertEquals(List.of(0, 1, 2), kafkaCommitter.committedOffsets);
 
     // Assert that all docs were written to elastic
     List<String> result2 =
@@ -376,7 +376,7 @@ public class ElasticsearchV7Test extends ElasticsearchTestBase {
     String typeName = "_doc";
 
     List<TestDoc> docs =
-        Arrays.asList(
+        List.of(
             new TestDoc("1", "a1", "b1", "c1"),
             new TestDoc("2", "a2", "b2", "c2"),
             new TestDoc("3", "a3", "b3", "c3"));
