@@ -51,8 +51,8 @@ import com.fasterxml.jackson.databind.ObjectReader;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.OptionalInt;
 import java.util.OptionalLong;
@@ -183,7 +183,7 @@ public class BigQueryDoc {
             tableId,
             OptionalLong.empty(),
             OptionalInt.empty(),
-            Collections.emptyList(),
+            List.of(),
             tableDataListUnmarshaller);
     // #table-data
 
@@ -234,7 +234,7 @@ public class BigQueryDoc {
     // #dataset-methods
     GoogleSettings settings = GoogleSettings.create(system);
     Source<Dataset, NotUsed> allDatasets =
-        BigQuery.listDatasets(OptionalInt.empty(), Optional.empty(), Collections.emptyMap());
+        BigQuery.listDatasets(OptionalInt.empty(), Optional.empty(), Map.of());
     CompletionStage<Dataset> existingDataset = BigQuery.getDataset(datasetId, settings, system);
     CompletionStage<Dataset> newDataset = BigQuery.createDataset("newDatasetId", settings, system);
     CompletionStage<Done> datasetDeleted =
