@@ -41,7 +41,6 @@ import javax.net.ssl.SSLContext;
 
 import static org.hamcrest.CoreMatchers.*;
 
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.concurrent.CompletionStage;
@@ -108,7 +107,7 @@ public class MqttSourceTest {
 
     MqttConnectionSettings connectionSettings = baseConnectionSettings;
 
-    final List<String> input = Arrays.asList("one", "two", "three", "four", "five");
+    final List<String> input = List.of("one", "two", "three", "four", "five");
 
     // #create-source-with-manualacks
     Source<MqttMessageWithAck, CompletionStage<Done>> mqttSource =
@@ -174,7 +173,7 @@ public class MqttSourceTest {
 
     final Sink<MqttMessage, CompletionStage<Done>> mqttSink =
         MqttSink.create(sinkSettings, MqttQoS.atLeastOnce());
-    final List<String> input = Arrays.asList("one", "two", "three", "four", "five");
+    final List<String> input = List.of("one", "two", "three", "four", "five");
 
     MqttConnectionSettings connectionSettings = sourceSettings.withCleanSession(false);
     MqttSubscriptions subscriptions = MqttSubscriptions.create(topic, MqttQoS.atLeastOnce());
